# laplace

./: .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  action.yml  oracle.py  pyproject.toml
action/: entrypoint.py
laplace_gate/: entrypoint.py  oracle.py
laplace_gate/license/: verify.py
laplace_gate/rules/: compiler.py
rules/: base_seccode.yaml
skills/laplace-setup/: SKILL.md
