[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laplace-gate"
version = "1.1.0"
description = "Deterministic, zero-LLM security gate for Python. Runs locally; reproducible receipts."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["pyyaml>=6", "cryptography>=42"]

[project.scripts]
laplace-gate = "laplace_gate.entrypoint:cli"

[tool.setuptools]
packages = ["laplace_gate", "laplace_gate.rules", "laplace_gate.license"]

[tool.setuptools.package-data]
"laplace_gate.rules" = ["*.yaml"]
